--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "name": "aykoServer",
   "version": "0.0.1",
   "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
+  "main": "testaytko.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node testaytko.js"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -16,12 +16,11 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "url": "https://github.com/xAyko/aykoServer"
   },
   "license": "MIT",
   "keywords": [
     "node",
-    "glitch",
     "express"
   ]
 }
